<resources>
    <string name="app_name">Rollout</string>

    <!-- Universal strings -->
    <string name="unknown_server_error">An unknown error occurred; please try again later.</string>
    <string name="dialog_ok">OK</string>

    <!-- Registration/Login screen strings -->
    <string name="registration_title">REGISTER</string>
    <string name="registration_name_label">NAME</string>
    <string name="registration_name_hint">john appleseed</string>
    <string name="registration_email_label">EMAIL</string>
    <string name="registration_email_hint">you@mail.com</string>
    <string name="registration_phone_label">PHONE NUMBER</string>
    <string name="registration_phone_hint">(860) 938-7131</string>
    <string name="registration_password_label">PASSWORD</string>
    <string name="registration_password_hint">password</string>
    <string name="registration_button">REGISTER</string>
    <string name="registration_from_login">Back to login</string>

    <string name="registration_name_error">Please enter a valid name.</string>
    <string name="registration_email_error">Please enter a valid email.</string>
    <string name="registration_phone_error">Please enter a valid phone number.</string>
    <string name="registration_password_error">Password must be at least 8 characters long.</string>
    <string name="registration_error_title">Account Error</string>
    <string name="registration_login_error">Account was created, but login failed; please try logging in.</string>

    <string name="login_error_title">Login Failed</string>
    <string name="login_error_content">Either username or password is incorrect.</string>

    <string name="login_title">LOGIN</string>
    <string name="login_email_label">EMAIL</string>
    <string name="login_email_hint">you@mail.com</string>
    <string name="login_password_label">PASSWORD</string>
    <string name="login_password_hint">password</string>
    <string name="login_button">LOGIN</string>
    <string name="login_go_to_registration">Don\'t have an account? Sign up!</string>
    <string name="login_forgot_button">Forgot password?</string>

    <!-- Forgot password -->
    <string name="forgot_title">FORGOT PASSWORD</string>
    <string name="forgot_content">Enter your email below to receive a one-time link to reset your password.</string>
    <string name="forgot_edit_label">EXISTING EMAIL</string>
    <string name="forgot_edit_hint">you@mail.com</string>
    <string name="forgot_edit_submit">SUBMIT</string>

    <string name="forgot_sorry">Sorry, no account exists with the given email.</string>
    <string name="forgot_check_title">CHECK EMAIL</string>
    <string name="forgot_check_content">We sent you an email with a link to reset your password. Note that this link will expire in 30 minutes.</string>
    <string name="forgot_wait_button">BACK TO LOGIN</string>

    <string name="forgot_reset_title">RESET PASSWORD</string>
    <string name="forgot_reset_content">Create a new password below. Your password must be at least 8 characters.</string>
    <string name="forgot_reset_edit_label">NEW PASSWORD</string>
    <string name="forgot_reset_edit_hint">new password</string>
    <string name="forgot_reset_confirm_button">CONFIRM RESET</string>

    <string name="forgot_reset_success">Your password has been successfully reset!</string>
    <string name="forgot_proceed_success">Continue to Rollout</string>

    <string name="forgot_password_error_title">Password Reset Failed</string>
    <string name="forgot_reset_error">There was an error resetting your password; please try again later.</string>

    <string name="forgot_back">Back to login</string>

    <!-- Suggestion Panel -->
    <string name="suggestion_handle">Pull up for suggestions</string>

    <!-- Voting Screen -->
    <string name="voting_title">CHOOSE LOCATION</string>
    <string name="voting_option_bar">BAR</string>
    <string name="voting_option_book">BOOK STORE</string>
    <string name="voting_option_cafe">CAFE</string>
    <string name="voting_option_library">LIBRARY</string>
    <string name="voting_option_club">NIGHT CLUB</string>
    <string name="voting_option_park">PARK</string>
    <string name="voting_option_restaurant">RESTAURANT</string>
    <string name="voting_option_school">SCHOOL</string>
    <string name="voting_option_mall">SHOPPING MALL</string>
    <string name="voting_option_university">UNIVERSITY</string>

    <!-- Group creation screen -->
    <string name="group_creation_title">CREATE GROUP</string>
    <string name="group_favorite_label">Favorites</string>
    <string name="group_contact_label">Contacts</string>
    <string name="group_add_person">ADD PEOPLE</string>
    <string name="group_creation_favorites">FAVORITES</string>
    <string name="group_creation_groups">GROUPS</string>
    <string name="group_creation_contacts">CONTACTS</string>

</resources>
